gitops/apps/base/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  annotations:
    cert-manager.io/cluster-issuer: "local-homelab-issuer"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pgadmin.home
      secretName: pgadmin-tls-cert
  rules:
    - host: pgadmin.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
